src_old/objects/LocationAssetCapacity__c.object
<CustomObject>
    <fields>
        <fullName>AssetCapacity__c</fullName>
        <inlineHelpText>Total number of assets of the selected type that are available for this location on this date.</inlineHelpText>
        <label>Asset Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssetType__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cart</fullName>
                </value>
                <value>
                    <fullName>Sink</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>AB Cart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AvailableCapacity__c</fullName>
        <inlineHelpText>Amount of remaining assets that can be reserved.</inlineHelpText>
        <label>Available Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocationDate__c</fullName>
        <formula>CASESAFEID(Location__c) + TEXT( Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationNumber__c</fullName>
        <formula>Location__r.LocationNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Location Asset Capacities</relationshipLabel>
        <relationshipName>LocationAssetCapacities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Location Asset Capacity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LAC-{00000}</displayFormat>
        <label>Location Asset Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Asset Capacities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>